# scummvm

./: .clang-format  CMakeLists.txt  README.md
audio/: fmopl.cpp  mixer_intern.h  win32_opl.cpp
backends/: modular-backend.cpp
backends/events/win32/: win32-events.cpp  win32-events.h
backends/graphics/gdi/: gdi-graphics.cpp  gdi-graphics.h
backends/mixer/win32/: win32-mixer.cpp  win32-mixer.h
backends/mutex/win32/: win32-mutex.cpp  win32-mutex.h
backends/platform/win32/: win32-main.cpp  win32-osystem.cpp  win32-osystem.h
backends/taskbar/win32/: win32-taskbar.cpp  win32-taskbar.h
base/: plugins.cpp
common/: endian.h  math.h  system.cpp
dists/: scummvm.rc
engines/scumm/: scumm.cpp
