cmake_minimum_required(VERSION 3.2)
project(ScummVM)

#set(ScummVM_SOURCE_DIR "../.." CACHE PATH "path to ScummVM Source")
#set(ENABLE_SCUMM TRUE CACHE BOOL "Enable SCUMM Support")

set(ScummVM_SOURCE_DIR ${CURRENT_CMAKE_SOURCE_DIR})
message(STATUS "ScummVM Source Dir: ${ScummVM_SOURCE_DIR}")

# Define the engines and subengines
set(ENGINES SCUMM)
set(SUB_ENGINES_SCUMM)

# Generate options for the engines
foreach(ENGINE IN LISTS ENGINES)
    OPTION(ENABLE_${ENGINE} "Enable ${ENGINE}" ON)
endforeach(ENGINE)
OPTION(ENABLE_WIN32_BACKEND "Enable Win32 Backend" ON)
OPTION(ENABLE_SDL_BACKEND "Enable SDL Backend" OFF)

include_directories(${ScummVM_SOURCE_DIR} ${ScummVM_SOURCE_DIR}/engines)

add_definitions(-DUSE_RGB_COLOR)
add_definitions(-DUSE_TASKBAR)
add_definitions(-DUSE_TRANSLATION)
add_definitions(-DUSE_DETECTLANG)
# add_definitions(-DUSE_HIGHRES)
# add_definitions(-DUSE_MT32EMU)
# add_definitions(-DUSE_OPENGL)
# add_definitions(-DUSE_SCALERS)
# add_definitions(-DUSE_HQ_SCALERS)

if (NOT MSVC)
    SET(CMAKE_CXX_FLAGS
        "${CMAKE_CXX_FLAGS}
        -Wall
        -Wno-long-long
        -Wno-multichar
        -Wno-unknown-pragmas
        -Wno-reorder
        -Wpointer-arith
        -Wcast-qual
        -Wcast-align
        -Wshadow
        -Wnon-virtual-dtor
        -Wwrite-strings
        -fno-exceptions
        -fcheck-new")
endif()

if (WIN32)
    add_definitions(-DWIN32)
else()
    add_definitions(-DPOSIX)
endif()
if (CMAKE_SIZEOF_VOID_P MATCHES 8)
    add_definitions(-DSCUMM_64BITS)
endif()

# add_definitions(-DSDL_BACKEND)
add_definitions(-DDISABLE_FANCY_THEMES)

# clean up compiler output
add_definitions(-D_CRT_SECURE_NO_WARNINGS)

# Generate definitions for the engines
foreach(ENGINE IN LISTS ENGINES)
    if (ENABLE_${ENGINE})
        add_definitions(-DENABLE_${ENGINE})
        foreach(SUB_ENGINE IN LISTS SUB_ENGINES_${ENGINE})
            add_definitions(-DENABLE_${SUB_ENGINE})
        endforeach(SUB_ENGINE)
    endif()
endforeach()

# Generate "engines/plugins_table.h"
file(REMOVE "engines/plugins_table.h")
file(APPEND "engines/plugins_table.h" "/* This file is automatically generated by CMake */\n")
foreach(ENGINE IN LISTS ENGINES)
    if (ENABLE_${ENGINE})
        file(APPEND "engines/plugins_table.h" "#if PLUGIN_ENABLED_STATIC(${ENGINE})\n")
        file(APPEND "engines/plugins_table.h" "LINK_PLUGIN(${ENGINE})\n")
        file(APPEND "engines/plugins_table.h" "#endif\n")
    endif()
endforeach()

# ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
# set the source grouping based on directory path
#
function(do_source_group SRC_BASE SRC_FILES)
    get_filename_component(FULL_BASE ${SRC_BASE} ABSOLUTE)
    foreach(_FILE ${SRC_FILES})
        get_filename_component(FULL_FILE ${_FILE} ABSOLUTE)
        file(RELATIVE_PATH _REL ${FULL_BASE} ${FULL_FILE})
        get_filename_component(_FOLDER ${_REL} DIRECTORY)
        if (_FOLDER)
#            message(STATUS "folder: ${_FOLDER}")
            string(REPLACE "/" "\\" _FOLDER ${_FOLDER})
            source_group(${_FOLDER} FILES ${_FILE})
        else()
#            message(STATUS "file: ${_FILE}")
            source_group("" FILES ${_FILE})
        endif()
    endforeach(_FILE)
endfunction(do_source_group)

if (ENABLE_SCUMM)
set(SCUMM_FILES
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/intern_he.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/resource_he.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/resource_he.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/script_v60he.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/script_v70he.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/sound_he.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/he/sound_he.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/imuse.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/imuse.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/imuse_internal.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/imuse_part.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/imuse_player.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/instrument.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/instrument.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/mac_m68k.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/mac_m68k.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/pcspk.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/pcspk.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/sysex.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/sysex_samnmax.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/imuse/sysex_scumm.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_ad.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_ad.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_apple2.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_apple2.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_mac.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_mac.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_mod.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_mod.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_nes.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_nes.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_pce.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_pce.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_sid.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_sid.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_towns.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_towns.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v1.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v1.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2a.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2a.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2base.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2base.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2cms.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v2cms.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v3a.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v3a.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v3m.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v3m.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v4a.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v4a.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v5m.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/players/player_v5m.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/actor.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/actor.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/actor_he.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/akos.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/akos.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/base-costume.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/base-costume.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/bomp.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/bomp.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/boxes.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/boxes.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/camera.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/cdda.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/cdda.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/charset-fontdata.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/charset.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/charset.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/costume.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/costume.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/cursor.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/debugger.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/debugger.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/detection.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/detection.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/detection_tables.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/dialogs.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/dialogs.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/file.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/file.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/file_nes.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/file_nes.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/gfx.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/gfx.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/gfx_towns.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/help.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/help.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/input.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/midiparser_ro.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/module.mk
    ${ScummVM_SOURCE_DIR}/engines/scumm/music.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/object.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/object.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/palette.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/resource.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/resource.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/resource_v2.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/resource_v3.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/resource_v4.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/room.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/saveload.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/saveload.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/script.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/script.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/script_v0.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/script_v2.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/script_v3.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/script_v4.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/script_v5.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/script_v6.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm-md5.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v0.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v2.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v3.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v4.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v5.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v6.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v7.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/scumm_v8.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/sound.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/sound.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/string.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/usage_bits.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/usage_bits.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/util.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/util.h
    ${ScummVM_SOURCE_DIR}/engines/scumm/vars.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/verbs.cpp
    ${ScummVM_SOURCE_DIR}/engines/scumm/verbs.h)
do_source_group(${ScummVM_SOURCE_DIR} "${SCUMM_FILES}")
add_library(scumm ${SCUMM_FILES})
endif()

# Libraries
set(SCUMMVM_FILES
    ${ScummVM_SOURCE_DIR}/audio/decoders/3do.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/3do.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/aac.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/aac.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/adpcm.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/adpcm.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/adpcm_intern.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/aiff.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/aiff.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/codec.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/flac.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/flac.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/iff_sound.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/iff_sound.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/mac_snd.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/mac_snd.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/mp3.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/mp3.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/qdm2.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/qdm2.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/qdm2data.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/quicktime.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/quicktime.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/quicktime_intern.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/raw.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/raw.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/voc.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/voc.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/vorbis.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/vorbis.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/wave.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/wave.h
    ${ScummVM_SOURCE_DIR}/audio/decoders/xa.cpp
    ${ScummVM_SOURCE_DIR}/audio/decoders/xa.h
    ${ScummVM_SOURCE_DIR}/audio/mods/infogrames.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/infogrames.h
    ${ScummVM_SOURCE_DIR}/audio/mods/maxtrax.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/maxtrax.h
    ${ScummVM_SOURCE_DIR}/audio/mods/module.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/module.h
    ${ScummVM_SOURCE_DIR}/audio/mods/paula.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/paula.h
    ${ScummVM_SOURCE_DIR}/audio/mods/protracker.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/protracker.h
    ${ScummVM_SOURCE_DIR}/audio/mods/rjp1.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/rjp1.h
    ${ScummVM_SOURCE_DIR}/audio/mods/soundfx.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/soundfx.h
    ${ScummVM_SOURCE_DIR}/audio/mods/tfmx.cpp
    ${ScummVM_SOURCE_DIR}/audio/mods/tfmx.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_audio.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_audio.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_euphony.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_euphony.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_midi.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_midi.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_pc98_driver.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_pc98_driver.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_pc98_fmsynth.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_pc98_fmsynth.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fmtowns_pc98/towns_pc98_plugins.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/c_interface/c_interface.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/c_interface/c_interface.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/c_interface/c_types.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/c_interface/cpp_interface.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/sha1/sha1.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/sha1/sha1.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Analog.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Analog.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/BReverbModel.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/BReverbModel.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Enumerations.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/File.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/File.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/FileStream.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/FileStream.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/LA32FloatWaveGenerator.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/LA32Ramp.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/LA32Ramp.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/LA32WaveGenerator.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/LA32WaveGenerator.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/MemoryRegion.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/MidiEventQueue.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/MidiStreamParser.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/MidiStreamParser.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Part.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Part.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Partial.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Partial.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/PartialManager.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/PartialManager.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Poly.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Poly.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/ROMInfo.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/ROMInfo.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/SampleRateConverter.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Structures.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Synth.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Synth.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/TVA.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/TVA.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/TVF.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/TVF.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/TVP.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/TVP.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Tables.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Tables.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/Types.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/config.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/globals.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/internals.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/mmath.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/module.mk
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32/mt32emu.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/dbopl.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/dbopl.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/dosbox.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/dosbox.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/mame.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/mame.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/nukedopl3.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/serial_opl.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/opl/zd_dbopl.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/appleiigs.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/cms.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/cms.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/eas.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/emumidi.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/fluidsynth.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/mt32.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/pcspk.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/pcspk.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/sid.cpp
    ${ScummVM_SOURCE_DIR}/audio/softsynth/sid.h
    ${ScummVM_SOURCE_DIR}/audio/softsynth/wave6581.cpp
    ${ScummVM_SOURCE_DIR}/audio/adlib.cpp
    ${ScummVM_SOURCE_DIR}/audio/audiostream.cpp
    ${ScummVM_SOURCE_DIR}/audio/audiostream.h
    ${ScummVM_SOURCE_DIR}/audio/fmopl.cpp
    ${ScummVM_SOURCE_DIR}/audio/fmopl.h
    ${ScummVM_SOURCE_DIR}/audio/mididrv.cpp
    ${ScummVM_SOURCE_DIR}/audio/mididrv.h
    ${ScummVM_SOURCE_DIR}/audio/midiparser.cpp
    ${ScummVM_SOURCE_DIR}/audio/midiparser.h
    ${ScummVM_SOURCE_DIR}/audio/midiparser_qt.cpp
    ${ScummVM_SOURCE_DIR}/audio/midiparser_qt.h
    ${ScummVM_SOURCE_DIR}/audio/midiparser_smf.cpp
    ${ScummVM_SOURCE_DIR}/audio/midiparser_xmidi.cpp
    ${ScummVM_SOURCE_DIR}/audio/midiplayer.cpp
    ${ScummVM_SOURCE_DIR}/audio/midiplayer.h
    ${ScummVM_SOURCE_DIR}/audio/miles.h
    ${ScummVM_SOURCE_DIR}/audio/miles_adlib.cpp
    ${ScummVM_SOURCE_DIR}/audio/miles_mt32.cpp
    ${ScummVM_SOURCE_DIR}/audio/mixer.cpp
    ${ScummVM_SOURCE_DIR}/audio/mixer.h
    ${ScummVM_SOURCE_DIR}/audio/mixer_intern.h
    ${ScummVM_SOURCE_DIR}/audio/module.mk
    ${ScummVM_SOURCE_DIR}/audio/mpu401.cpp
    ${ScummVM_SOURCE_DIR}/audio/mpu401.h
    ${ScummVM_SOURCE_DIR}/audio/musicplugin.cpp
    ${ScummVM_SOURCE_DIR}/audio/musicplugin.h
    ${ScummVM_SOURCE_DIR}/audio/null.cpp
    ${ScummVM_SOURCE_DIR}/audio/null.h
    ${ScummVM_SOURCE_DIR}/audio/rate.cpp
    ${ScummVM_SOURCE_DIR}/audio/rate.h
    ${ScummVM_SOURCE_DIR}/audio/timestamp.cpp
    ${ScummVM_SOURCE_DIR}/audio/timestamp.h
    ${ScummVM_SOURCE_DIR}/backends/audiocd/default/default-audiocd.cpp
    ${ScummVM_SOURCE_DIR}/backends/audiocd/default/default-audiocd.h
    ${ScummVM_SOURCE_DIR}/backends/audiocd/sdl/sdl-audiocd.cpp
    ${ScummVM_SOURCE_DIR}/backends/audiocd/sdl/sdl-audiocd.h
    ${ScummVM_SOURCE_DIR}/backends/audiocd/win32/win32-audiocd.cpp
    ${ScummVM_SOURCE_DIR}/backends/audiocd/win32/win32-audiocd.h
    ${ScummVM_SOURCE_DIR}/backends/audiocd/audiocd-stream.cpp
    ${ScummVM_SOURCE_DIR}/backends/audiocd/audiocd-stream.h
    ${ScummVM_SOURCE_DIR}/backends/audiocd/audiocd.h
    ${ScummVM_SOURCE_DIR}/backends/events/default/default-events.cpp
    ${ScummVM_SOURCE_DIR}/backends/events/default/default-events.h
    ${ScummVM_SOURCE_DIR}/backends/fs/windows/windows-fs-factory.cpp
    ${ScummVM_SOURCE_DIR}/backends/fs/windows/windows-fs-factory.h
    ${ScummVM_SOURCE_DIR}/backends/fs/windows/windows-fs.cpp
    ${ScummVM_SOURCE_DIR}/backends/fs/windows/windows-fs.h
    ${ScummVM_SOURCE_DIR}/backends/fs/abstract-fs.cpp
    ${ScummVM_SOURCE_DIR}/backends/fs/abstract-fs.h
    ${ScummVM_SOURCE_DIR}/backends/fs/fs-factory.h
    ${ScummVM_SOURCE_DIR}/backends/fs/stdiostream.cpp
    ${ScummVM_SOURCE_DIR}/backends/fs/stdiostream.h
    ${ScummVM_SOURCE_DIR}/backends/graphics/default-palette.h
    ${ScummVM_SOURCE_DIR}/backends/graphics/graphics.h
    ${ScummVM_SOURCE_DIR}/backends/log/log.cpp
    ${ScummVM_SOURCE_DIR}/backends/log/log.h
#   ${ScummVM_SOURCE_DIR}/backends/midi/alsa.cpp
#   ${ScummVM_SOURCE_DIR}/backends/midi/dmedia.cpp
#   ${ScummVM_SOURCE_DIR}/backends/midi/seq.cpp
#   ${ScummVM_SOURCE_DIR}/backends/midi/sndio.cpp
#   ${ScummVM_SOURCE_DIR}/backends/midi/stmidi.cpp
#   ${ScummVM_SOURCE_DIR}/backends/midi/timidity.cpp
#   ${ScummVM_SOURCE_DIR}/backends/midi/windows.cpp
    ${ScummVM_SOURCE_DIR}/backends/mutex/mutex.h
    ${ScummVM_SOURCE_DIR}/backends/networking/connection/islimited-default.cpp
    ${ScummVM_SOURCE_DIR}/backends/networking/connection/islimited.h
    ${ScummVM_SOURCE_DIR}/backends/plugins/win32/win32-provider.cpp
    ${ScummVM_SOURCE_DIR}/backends/plugins/win32/win32-provider.h
    ${ScummVM_SOURCE_DIR}/backends/plugins/dynamic-plugin.h
    ${ScummVM_SOURCE_DIR}/backends/saves/default/default-saves.cpp
    ${ScummVM_SOURCE_DIR}/backends/saves/default/default-saves.h
    ${ScummVM_SOURCE_DIR}/backends/saves/windows/windows-saves.cpp
    ${ScummVM_SOURCE_DIR}/backends/saves/windows/windows-saves.h
    ${ScummVM_SOURCE_DIR}/backends/saves/savefile.cpp
    ${ScummVM_SOURCE_DIR}/backends/taskbar/win32/mingw-compat.h
    ${ScummVM_SOURCE_DIR}/backends/taskbar/win32/win32-taskbar.cpp
    ${ScummVM_SOURCE_DIR}/backends/taskbar/win32/win32-taskbar.h
    ${ScummVM_SOURCE_DIR}/backends/timer/default/default-timer.cpp
    ${ScummVM_SOURCE_DIR}/backends/timer/default/default-timer.h
    ${ScummVM_SOURCE_DIR}/backends/updates/win32/win32-updates.cpp
    ${ScummVM_SOURCE_DIR}/backends/updates/win32/win32-updates.h
    ${ScummVM_SOURCE_DIR}/backends/base-backend.cpp
    ${ScummVM_SOURCE_DIR}/backends/base-backend.h
    ${ScummVM_SOURCE_DIR}/backends/modular-backend.cpp
    ${ScummVM_SOURCE_DIR}/backends/modular-backend.h
    ${ScummVM_SOURCE_DIR}/backends/module.mk
    ${ScummVM_SOURCE_DIR}/base/commandLine.cpp
    ${ScummVM_SOURCE_DIR}/base/commandLine.h
    ${ScummVM_SOURCE_DIR}/base/internal_version.h
    ${ScummVM_SOURCE_DIR}/base/main.cpp
    ${ScummVM_SOURCE_DIR}/base/main.h
    ${ScummVM_SOURCE_DIR}/base/module.mk
    ${ScummVM_SOURCE_DIR}/base/plugins.cpp
    ${ScummVM_SOURCE_DIR}/base/plugins.h
    ${ScummVM_SOURCE_DIR}/base/version.cpp
    ${ScummVM_SOURCE_DIR}/base/version.h
    ${ScummVM_SOURCE_DIR}/common/EventDispatcher.cpp
    ${ScummVM_SOURCE_DIR}/common/EventMapper.cpp
    ${ScummVM_SOURCE_DIR}/common/algorithm.h
    ${ScummVM_SOURCE_DIR}/common/archive.cpp
    ${ScummVM_SOURCE_DIR}/common/archive.h
    ${ScummVM_SOURCE_DIR}/common/array.h
    ${ScummVM_SOURCE_DIR}/common/bitstream.h
    ${ScummVM_SOURCE_DIR}/common/bufferedstream.h
    ${ScummVM_SOURCE_DIR}/common/c++11-compat.h
    ${ScummVM_SOURCE_DIR}/common/callback.h
    ${ScummVM_SOURCE_DIR}/common/config-manager.cpp
    ${ScummVM_SOURCE_DIR}/common/config-manager.h
    ${ScummVM_SOURCE_DIR}/common/coroutines.cpp
    ${ScummVM_SOURCE_DIR}/common/coroutines.h
    ${ScummVM_SOURCE_DIR}/common/cosinetables.cpp
    ${ScummVM_SOURCE_DIR}/common/cosinetables.h
    ${ScummVM_SOURCE_DIR}/common/dcl.cpp
    ${ScummVM_SOURCE_DIR}/common/dcl.h
    ${ScummVM_SOURCE_DIR}/common/dct.cpp
    ${ScummVM_SOURCE_DIR}/common/dct.h
    ${ScummVM_SOURCE_DIR}/common/debug-channels.h
    ${ScummVM_SOURCE_DIR}/common/debug.cpp
    ${ScummVM_SOURCE_DIR}/common/debug.h
    ${ScummVM_SOURCE_DIR}/common/endian.h
    ${ScummVM_SOURCE_DIR}/common/error.cpp
    ${ScummVM_SOURCE_DIR}/common/error.h
    ${ScummVM_SOURCE_DIR}/common/events.h
    ${ScummVM_SOURCE_DIR}/common/fft.cpp
    ${ScummVM_SOURCE_DIR}/common/fft.h
    ${ScummVM_SOURCE_DIR}/common/file.cpp
    ${ScummVM_SOURCE_DIR}/common/file.h
    ${ScummVM_SOURCE_DIR}/common/forbidden.h
    ${ScummVM_SOURCE_DIR}/common/frac.h
    ${ScummVM_SOURCE_DIR}/common/fs.cpp
    ${ScummVM_SOURCE_DIR}/common/fs.h
    ${ScummVM_SOURCE_DIR}/common/func.h
    ${ScummVM_SOURCE_DIR}/common/gui_options.cpp
    ${ScummVM_SOURCE_DIR}/common/gui_options.h
    ${ScummVM_SOURCE_DIR}/common/hash-str.h
    ${ScummVM_SOURCE_DIR}/common/hashmap.cpp
    ${ScummVM_SOURCE_DIR}/common/hashmap.h
    ${ScummVM_SOURCE_DIR}/common/huffman.cpp
    ${ScummVM_SOURCE_DIR}/common/huffman.h
    ${ScummVM_SOURCE_DIR}/common/iff_container.cpp
    ${ScummVM_SOURCE_DIR}/common/iff_container.h
    ${ScummVM_SOURCE_DIR}/common/ini-file.cpp
    ${ScummVM_SOURCE_DIR}/common/ini-file.h
    ${ScummVM_SOURCE_DIR}/common/installshield_cab.cpp
    ${ScummVM_SOURCE_DIR}/common/installshield_cab.h
    ${ScummVM_SOURCE_DIR}/common/json.cpp
    ${ScummVM_SOURCE_DIR}/common/json.h
    ${ScummVM_SOURCE_DIR}/common/keyboard.h
    ${ScummVM_SOURCE_DIR}/common/language.cpp
    ${ScummVM_SOURCE_DIR}/common/language.h
    ${ScummVM_SOURCE_DIR}/common/list.h
    ${ScummVM_SOURCE_DIR}/common/list_intern.h
    ${ScummVM_SOURCE_DIR}/common/localization.cpp
    ${ScummVM_SOURCE_DIR}/common/localization.h
    ${ScummVM_SOURCE_DIR}/common/macresman.cpp
    ${ScummVM_SOURCE_DIR}/common/macresman.h
    ${ScummVM_SOURCE_DIR}/common/math.h
    ${ScummVM_SOURCE_DIR}/common/md5.cpp
    ${ScummVM_SOURCE_DIR}/common/md5.h
    ${ScummVM_SOURCE_DIR}/common/memory.h
    ${ScummVM_SOURCE_DIR}/common/memorypool.cpp
    ${ScummVM_SOURCE_DIR}/common/memorypool.h
    ${ScummVM_SOURCE_DIR}/common/memstream.h
    ${ScummVM_SOURCE_DIR}/common/module.mk
    ${ScummVM_SOURCE_DIR}/common/mutex.cpp
    ${ScummVM_SOURCE_DIR}/common/mutex.h
    ${ScummVM_SOURCE_DIR}/common/noncopyable.h
    ${ScummVM_SOURCE_DIR}/common/osd_message_queue.cpp
    ${ScummVM_SOURCE_DIR}/common/osd_message_queue.h
    ${ScummVM_SOURCE_DIR}/common/pack-end.h
    ${ScummVM_SOURCE_DIR}/common/pack-start.h
    ${ScummVM_SOURCE_DIR}/common/platform.cpp
    ${ScummVM_SOURCE_DIR}/common/platform.h
    ${ScummVM_SOURCE_DIR}/common/ptr.h
    ${ScummVM_SOURCE_DIR}/common/queue.h
    ${ScummVM_SOURCE_DIR}/common/quicktime.cpp
    ${ScummVM_SOURCE_DIR}/common/quicktime.h
    ${ScummVM_SOURCE_DIR}/common/random.cpp
    ${ScummVM_SOURCE_DIR}/common/random.h
    ${ScummVM_SOURCE_DIR}/common/rational.cpp
    ${ScummVM_SOURCE_DIR}/common/rational.h
    ${ScummVM_SOURCE_DIR}/common/rdft.cpp
    ${ScummVM_SOURCE_DIR}/common/rdft.h
    ${ScummVM_SOURCE_DIR}/common/rect.h
    ${ScummVM_SOURCE_DIR}/common/rendermode.cpp
    ${ScummVM_SOURCE_DIR}/common/rendermode.h
    ${ScummVM_SOURCE_DIR}/common/safe-bool.h
    ${ScummVM_SOURCE_DIR}/common/savefile.h
    ${ScummVM_SOURCE_DIR}/common/scummsys.h
    ${ScummVM_SOURCE_DIR}/common/serializer.h
    ${ScummVM_SOURCE_DIR}/common/sinetables.cpp
    ${ScummVM_SOURCE_DIR}/common/sinetables.h
    ${ScummVM_SOURCE_DIR}/common/singleton.h
    ${ScummVM_SOURCE_DIR}/common/span.h
    ${ScummVM_SOURCE_DIR}/common/stack.h
    ${ScummVM_SOURCE_DIR}/common/str-array.h
    ${ScummVM_SOURCE_DIR}/common/str.cpp
    ${ScummVM_SOURCE_DIR}/common/str.h
    ${ScummVM_SOURCE_DIR}/common/stream.cpp
    ${ScummVM_SOURCE_DIR}/common/stream.h
    ${ScummVM_SOURCE_DIR}/common/substream.h
    ${ScummVM_SOURCE_DIR}/common/system.cpp
    ${ScummVM_SOURCE_DIR}/common/system.h
    ${ScummVM_SOURCE_DIR}/common/taskbar.h
    ${ScummVM_SOURCE_DIR}/common/textconsole.cpp
    ${ScummVM_SOURCE_DIR}/common/textconsole.h
    ${ScummVM_SOURCE_DIR}/common/timer.h
    ${ScummVM_SOURCE_DIR}/common/tokenizer.cpp
    ${ScummVM_SOURCE_DIR}/common/tokenizer.h
    ${ScummVM_SOURCE_DIR}/common/translation.cpp
    ${ScummVM_SOURCE_DIR}/common/translation.h
    ${ScummVM_SOURCE_DIR}/common/type-traits.h
    ${ScummVM_SOURCE_DIR}/common/types.h
    ${ScummVM_SOURCE_DIR}/common/unarj.cpp
    ${ScummVM_SOURCE_DIR}/common/unarj.h
    ${ScummVM_SOURCE_DIR}/common/unzip.cpp
    ${ScummVM_SOURCE_DIR}/common/unzip.h
    ${ScummVM_SOURCE_DIR}/common/ustr.cpp
    ${ScummVM_SOURCE_DIR}/common/ustr.h
    ${ScummVM_SOURCE_DIR}/common/util.cpp
    ${ScummVM_SOURCE_DIR}/common/util.h
    ${ScummVM_SOURCE_DIR}/common/winexe.cpp
    ${ScummVM_SOURCE_DIR}/common/winexe.h
    ${ScummVM_SOURCE_DIR}/common/winexe_ne.cpp
    ${ScummVM_SOURCE_DIR}/common/winexe_ne.h
    ${ScummVM_SOURCE_DIR}/common/winexe_pe.cpp
    ${ScummVM_SOURCE_DIR}/common/winexe_pe.h
    ${ScummVM_SOURCE_DIR}/common/xmlparser.cpp
    ${ScummVM_SOURCE_DIR}/common/xmlparser.h
    ${ScummVM_SOURCE_DIR}/common/zlib.cpp
    ${ScummVM_SOURCE_DIR}/common/zlib.h
    ${ScummVM_SOURCE_DIR}/engines/advancedDetector.cpp
    ${ScummVM_SOURCE_DIR}/engines/advancedDetector.h
    ${ScummVM_SOURCE_DIR}/engines/dialogs.cpp
    ${ScummVM_SOURCE_DIR}/engines/dialogs.h
    ${ScummVM_SOURCE_DIR}/engines/engine.cpp
    ${ScummVM_SOURCE_DIR}/engines/engine.h
    ${ScummVM_SOURCE_DIR}/engines/game.cpp
    ${ScummVM_SOURCE_DIR}/engines/game.h
    ${ScummVM_SOURCE_DIR}/engines/logo_data.h
    ${ScummVM_SOURCE_DIR}/engines/metaengine.h
    ${ScummVM_SOURCE_DIR}/engines/module.mk
    ${ScummVM_SOURCE_DIR}/engines/obsolete.cpp
    ${ScummVM_SOURCE_DIR}/engines/obsolete.h
    ${ScummVM_SOURCE_DIR}/engines/savestate.cpp
    ${ScummVM_SOURCE_DIR}/engines/savestate.h
    ${ScummVM_SOURCE_DIR}/engines/util.h
    ${ScummVM_SOURCE_DIR}/graphics/fonts/bdf.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/bdf.h
    ${ScummVM_SOURCE_DIR}/graphics/fonts/consolefont.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/macfont.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/macfont.h
    ${ScummVM_SOURCE_DIR}/graphics/fonts/newfont.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/newfont_big.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/ttf.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/ttf.h
    ${ScummVM_SOURCE_DIR}/graphics/fonts/winfont.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fonts/winfont.h
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macfontmanager.cpp
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macfontmanager.h
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macmenu.cpp
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macmenu.h
    ${ScummVM_SOURCE_DIR}/graphics/macgui/mactext.cpp
    ${ScummVM_SOURCE_DIR}/graphics/macgui/mactext.h
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macwindow.cpp
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macwindow.h
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macwindowborder.cpp
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macwindowborder.h
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macwindowmanager.cpp
    ${ScummVM_SOURCE_DIR}/graphics/macgui/macwindowmanager.h
#   ${ScummVM_SOURCE_DIR}/graphics/scaler/2xsai.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler/aspect.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler/aspect.h
#   ${ScummVM_SOURCE_DIR}/graphics/scaler/downscaler.cpp
#   ${ScummVM_SOURCE_DIR}/graphics/scaler/downscaler.h
#   ${ScummVM_SOURCE_DIR}/graphics/scaler/hq2x.cpp
#   ${ScummVM_SOURCE_DIR}/graphics/scaler/hq3x.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler/intern.h
    ${ScummVM_SOURCE_DIR}/graphics/scaler/scale2x.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler/scale2x.h
    ${ScummVM_SOURCE_DIR}/graphics/scaler/scale3x.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler/scale3x.h
    ${ScummVM_SOURCE_DIR}/graphics/scaler/scalebit.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler/scalebit.h
    ${ScummVM_SOURCE_DIR}/graphics/scaler/thumbnail_intern.cpp
    ${ScummVM_SOURCE_DIR}/graphics/VectorRenderer.cpp
    ${ScummVM_SOURCE_DIR}/graphics/VectorRenderer.h
    ${ScummVM_SOURCE_DIR}/graphics/VectorRendererSpec.cpp
    ${ScummVM_SOURCE_DIR}/graphics/VectorRendererSpec.h
    ${ScummVM_SOURCE_DIR}/graphics/colormasks.h
    ${ScummVM_SOURCE_DIR}/graphics/conversion.cpp
    ${ScummVM_SOURCE_DIR}/graphics/conversion.h
    ${ScummVM_SOURCE_DIR}/graphics/cursor.h
    ${ScummVM_SOURCE_DIR}/graphics/cursorman.cpp
    ${ScummVM_SOURCE_DIR}/graphics/cursorman.h
    ${ScummVM_SOURCE_DIR}/graphics/font.cpp
    ${ScummVM_SOURCE_DIR}/graphics/font.h
    ${ScummVM_SOURCE_DIR}/graphics/fontman.cpp
    ${ScummVM_SOURCE_DIR}/graphics/fontman.h
    ${ScummVM_SOURCE_DIR}/graphics/maccursor.cpp
    ${ScummVM_SOURCE_DIR}/graphics/maccursor.h
    ${ScummVM_SOURCE_DIR}/graphics/managed_surface.cpp
    ${ScummVM_SOURCE_DIR}/graphics/managed_surface.h
    ${ScummVM_SOURCE_DIR}/graphics/module.mk
    ${ScummVM_SOURCE_DIR}/graphics/nine_patch.cpp
    ${ScummVM_SOURCE_DIR}/graphics/nine_patch.h
    ${ScummVM_SOURCE_DIR}/graphics/palette.h
    ${ScummVM_SOURCE_DIR}/graphics/pixelformat.cpp
    ${ScummVM_SOURCE_DIR}/graphics/pixelformat.h
    ${ScummVM_SOURCE_DIR}/graphics/primitives.cpp
    ${ScummVM_SOURCE_DIR}/graphics/primitives.h
    ${ScummVM_SOURCE_DIR}/graphics/scaler.cpp
    ${ScummVM_SOURCE_DIR}/graphics/scaler.h
    ${ScummVM_SOURCE_DIR}/graphics/screen.cpp
    ${ScummVM_SOURCE_DIR}/graphics/screen.h
    ${ScummVM_SOURCE_DIR}/graphics/sjis.cpp
    ${ScummVM_SOURCE_DIR}/graphics/sjis.h
    ${ScummVM_SOURCE_DIR}/graphics/surface.cpp
    ${ScummVM_SOURCE_DIR}/graphics/surface.h
    ${ScummVM_SOURCE_DIR}/graphics/thumbnail.cpp
    ${ScummVM_SOURCE_DIR}/graphics/thumbnail.h
    ${ScummVM_SOURCE_DIR}/graphics/transform_struct.cpp
    ${ScummVM_SOURCE_DIR}/graphics/transform_struct.h
    ${ScummVM_SOURCE_DIR}/graphics/transform_tools.cpp
    ${ScummVM_SOURCE_DIR}/graphics/transform_tools.h
    ${ScummVM_SOURCE_DIR}/graphics/transparent_surface.cpp
    ${ScummVM_SOURCE_DIR}/graphics/transparent_surface.h
    ${ScummVM_SOURCE_DIR}/graphics/wincursor.cpp
    ${ScummVM_SOURCE_DIR}/graphics/wincursor.h
    ${ScummVM_SOURCE_DIR}/graphics/yuv_to_rgb.cpp
    ${ScummVM_SOURCE_DIR}/graphics/yuv_to_rgb.h
    ${ScummVM_SOURCE_DIR}/gui/animation/AccelerateInterpolator.h
    ${ScummVM_SOURCE_DIR}/gui/animation/AlphaAnimation.h
    ${ScummVM_SOURCE_DIR}/gui/animation/Animation.cpp
    ${ScummVM_SOURCE_DIR}/gui/animation/Animation.h
    ${ScummVM_SOURCE_DIR}/gui/animation/DeccelerateInterpolator.h
    ${ScummVM_SOURCE_DIR}/gui/animation/Drawable.h
    ${ScummVM_SOURCE_DIR}/gui/animation/Interpolator.h
    ${ScummVM_SOURCE_DIR}/gui/animation/ParallelAnimation.h
    ${ScummVM_SOURCE_DIR}/gui/animation/RepeatAnimationWrapper.cpp
    ${ScummVM_SOURCE_DIR}/gui/animation/RepeatAnimationWrapper.h
    ${ScummVM_SOURCE_DIR}/gui/animation/ScaleAnimation.h
    ${ScummVM_SOURCE_DIR}/gui/animation/SequenceAnimationComposite.cpp
    ${ScummVM_SOURCE_DIR}/gui/animation/SequenceAnimationComposite.h
    ${ScummVM_SOURCE_DIR}/gui/animation/WaitForConditionAnimation.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/editable.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/editable.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/edittext.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/edittext.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/list.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/list.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/popup.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/popup.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/scrollbar.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/scrollbar.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/scrollcontainer.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/scrollcontainer.h
    ${ScummVM_SOURCE_DIR}/gui/widgets/tab.cpp
    ${ScummVM_SOURCE_DIR}/gui/widgets/tab.h
    ${ScummVM_SOURCE_DIR}/gui/Actions.h
    ${ScummVM_SOURCE_DIR}/gui/EventRecorder.cpp
    ${ScummVM_SOURCE_DIR}/gui/EventRecorder.h
    ${ScummVM_SOURCE_DIR}/gui/Key.h
    ${ScummVM_SOURCE_DIR}/gui/KeysDialog.h
    ${ScummVM_SOURCE_DIR}/gui/ThemeEngine.cpp
    ${ScummVM_SOURCE_DIR}/gui/ThemeEngine.h
    ${ScummVM_SOURCE_DIR}/gui/ThemeEval.cpp
    ${ScummVM_SOURCE_DIR}/gui/ThemeEval.h
    ${ScummVM_SOURCE_DIR}/gui/ThemeLayout.cpp
    ${ScummVM_SOURCE_DIR}/gui/ThemeLayout.h
    ${ScummVM_SOURCE_DIR}/gui/ThemeParser.cpp
    ${ScummVM_SOURCE_DIR}/gui/ThemeParser.h
    ${ScummVM_SOURCE_DIR}/gui/Tooltip.cpp
    ${ScummVM_SOURCE_DIR}/gui/Tooltip.h
    ${ScummVM_SOURCE_DIR}/gui/about.cpp
    ${ScummVM_SOURCE_DIR}/gui/about.h
    ${ScummVM_SOURCE_DIR}/gui/browser.cpp
    ${ScummVM_SOURCE_DIR}/gui/browser.h
    ${ScummVM_SOURCE_DIR}/gui/chooser.cpp
    ${ScummVM_SOURCE_DIR}/gui/chooser.h
    ${ScummVM_SOURCE_DIR}/gui/console.cpp
    ${ScummVM_SOURCE_DIR}/gui/console.h
    ${ScummVM_SOURCE_DIR}/gui/credits.h
    ${ScummVM_SOURCE_DIR}/gui/debugger.cpp
    ${ScummVM_SOURCE_DIR}/gui/debugger.h
    ${ScummVM_SOURCE_DIR}/gui/dialog.cpp
    ${ScummVM_SOURCE_DIR}/gui/dialog.h
    ${ScummVM_SOURCE_DIR}/gui/editgamedialog.cpp
    ${ScummVM_SOURCE_DIR}/gui/editgamedialog.h
    ${ScummVM_SOURCE_DIR}/gui/error.cpp
    ${ScummVM_SOURCE_DIR}/gui/error.h
    ${ScummVM_SOURCE_DIR}/gui/filebrowser-dialog.cpp
    ${ScummVM_SOURCE_DIR}/gui/filebrowser-dialog.h
    ${ScummVM_SOURCE_DIR}/gui/gui-manager.cpp
    ${ScummVM_SOURCE_DIR}/gui/gui-manager.h
    ${ScummVM_SOURCE_DIR}/gui/launcher.cpp
    ${ScummVM_SOURCE_DIR}/gui/launcher.h
    ${ScummVM_SOURCE_DIR}/gui/massadd.cpp
    ${ScummVM_SOURCE_DIR}/gui/massadd.h
    ${ScummVM_SOURCE_DIR}/gui/message.cpp
    ${ScummVM_SOURCE_DIR}/gui/message.h
    ${ScummVM_SOURCE_DIR}/gui/module.mk
    ${ScummVM_SOURCE_DIR}/gui/object.cpp
    ${ScummVM_SOURCE_DIR}/gui/object.h
    ${ScummVM_SOURCE_DIR}/gui/options.cpp
    ${ScummVM_SOURCE_DIR}/gui/options.h
    ${ScummVM_SOURCE_DIR}/gui/predictivedialog.cpp
    ${ScummVM_SOURCE_DIR}/gui/predictivedialog.h
    ${ScummVM_SOURCE_DIR}/gui/saveload-dialog.cpp
    ${ScummVM_SOURCE_DIR}/gui/saveload-dialog.h
    ${ScummVM_SOURCE_DIR}/gui/saveload.cpp
    ${ScummVM_SOURCE_DIR}/gui/saveload.h
    ${ScummVM_SOURCE_DIR}/gui/themebrowser.cpp
    ${ScummVM_SOURCE_DIR}/gui/themebrowser.h
    ${ScummVM_SOURCE_DIR}/gui/widget.cpp
    ${ScummVM_SOURCE_DIR}/gui/widget.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/get_bits.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/get_bits.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/indeo.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/indeo.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/indeo_dsp.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/indeo_dsp.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/mem.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/mem.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/vlc.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo/vlc.h
    ${ScummVM_SOURCE_DIR}/image/codecs/bmp_raw.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/bmp_raw.h
    ${ScummVM_SOURCE_DIR}/image/codecs/cdtoons.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/cdtoons.h
    ${ScummVM_SOURCE_DIR}/image/codecs/cinepak.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/cinepak.h
    ${ScummVM_SOURCE_DIR}/image/codecs/cinepak_tables.h
    ${ScummVM_SOURCE_DIR}/image/codecs/codec.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/codec.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo3.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo3.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo4.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo4.h
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo5.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/indeo5.h
    ${ScummVM_SOURCE_DIR}/image/codecs/mjpeg.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/mjpeg.h
    ${ScummVM_SOURCE_DIR}/image/codecs/msrle.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/msrle.h
    ${ScummVM_SOURCE_DIR}/image/codecs/msrle4.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/msrle4.h
    ${ScummVM_SOURCE_DIR}/image/codecs/msvideo1.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/msvideo1.h
    ${ScummVM_SOURCE_DIR}/image/codecs/qtrle.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/qtrle.h
    ${ScummVM_SOURCE_DIR}/image/codecs/rpza.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/rpza.h
    ${ScummVM_SOURCE_DIR}/image/codecs/smc.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/smc.h
    ${ScummVM_SOURCE_DIR}/image/codecs/svq1.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/svq1.h
    ${ScummVM_SOURCE_DIR}/image/codecs/svq1_cb.h
    ${ScummVM_SOURCE_DIR}/image/codecs/svq1_vlc.h
    ${ScummVM_SOURCE_DIR}/image/codecs/truemotion1.cpp
    ${ScummVM_SOURCE_DIR}/image/codecs/truemotion1.h
    ${ScummVM_SOURCE_DIR}/image/codecs/truemotion1data.h
    ${ScummVM_SOURCE_DIR}/image/bmp.cpp
    ${ScummVM_SOURCE_DIR}/image/bmp.h
    ${ScummVM_SOURCE_DIR}/image/iff.cpp
    ${ScummVM_SOURCE_DIR}/image/iff.h
    ${ScummVM_SOURCE_DIR}/image/image_decoder.h
    ${ScummVM_SOURCE_DIR}/image/jpeg.cpp
    ${ScummVM_SOURCE_DIR}/image/jpeg.h
    ${ScummVM_SOURCE_DIR}/image/module.mk
    ${ScummVM_SOURCE_DIR}/image/pcx.cpp
    ${ScummVM_SOURCE_DIR}/image/pcx.h
    ${ScummVM_SOURCE_DIR}/image/pict.cpp
    ${ScummVM_SOURCE_DIR}/image/pict.h
    ${ScummVM_SOURCE_DIR}/image/png.cpp
    ${ScummVM_SOURCE_DIR}/image/png.h
    ${ScummVM_SOURCE_DIR}/image/tga.cpp
    ${ScummVM_SOURCE_DIR}/image/tga.h
    ${ScummVM_SOURCE_DIR}/video/avi_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/avi_decoder.h
    ${ScummVM_SOURCE_DIR}/video/binkdata.h
    ${ScummVM_SOURCE_DIR}/video/coktel_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/coktel_decoder.h
    ${ScummVM_SOURCE_DIR}/video/dxa_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/dxa_decoder.h
    ${ScummVM_SOURCE_DIR}/video/flic_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/flic_decoder.h
    ${ScummVM_SOURCE_DIR}/video/module.mk
    ${ScummVM_SOURCE_DIR}/video/mpegps_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/mpegps_decoder.h
    ${ScummVM_SOURCE_DIR}/video/psx_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/psx_decoder.h
    ${ScummVM_SOURCE_DIR}/video/qt_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/qt_decoder.h
    ${ScummVM_SOURCE_DIR}/video/smk_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/smk_decoder.h
    ${ScummVM_SOURCE_DIR}/video/video_decoder.cpp
    ${ScummVM_SOURCE_DIR}/video/video_decoder.h
    ${ScummVM_SOURCE_DIR}/AUTHORS
    ${ScummVM_SOURCE_DIR}/COPYING
    ${ScummVM_SOURCE_DIR}/COPYING.BSD
    ${ScummVM_SOURCE_DIR}/COPYING.FREEFONT
    ${ScummVM_SOURCE_DIR}/COPYING.LGPL
    ${ScummVM_SOURCE_DIR}/COPYRIGHT
    ${ScummVM_SOURCE_DIR}/NEWS
    ${ScummVM_SOURCE_DIR}/README
    ${ScummVM_SOURCE_DIR}/TODO)

if (ENABLE_SDL_BACKEND)
set(SDL_BACKEND_FILES
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/win32/win32-main.cpp
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/win32/win32-window.cpp
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/win32/win32-window.h
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/win32/win32.cpp
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/win32/win32.h
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/module.mk
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/sdl-sys.h
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/sdl-window.cpp
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/sdl-window.h
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/sdl.cpp
    ${ScummVM_SOURCE_DIR}/backends/platform/sdl/sdl.h
    ${ScummVM_SOURCE_DIR}/backends/plugins/sdl/sdl-provider.cpp
    ${ScummVM_SOURCE_DIR}/backends/plugins/sdl/sdl-provider.h
    # mutex
    ${ScummVM_SOURCE_DIR}/backends/mutex/sdl/sdl-mutex.cpp
    ${ScummVM_SOURCE_DIR}/backends/mutex/sdl/sdl-mutex.h
    # timer
    ${ScummVM_SOURCE_DIR}/backends/timer/sdl/sdl-timer.cpp
    ${ScummVM_SOURCE_DIR}/backends/timer/sdl/sdl-timer.h
    # events
    ${ScummVM_SOURCE_DIR}/backends/events/sdl/sdl-events.cpp
    ${ScummVM_SOURCE_DIR}/backends/events/sdl/sdl-events.h
    # graphics
    ${ScummVM_SOURCE_DIR}/backends/graphics/sdl/sdl-graphics.cpp
    ${ScummVM_SOURCE_DIR}/backends/graphics/sdl/sdl-graphics.h
    ${ScummVM_SOURCE_DIR}/backends/graphics/surfacesdl/surfacesdl-graphics.cpp
    ${ScummVM_SOURCE_DIR}/backends/graphics/surfacesdl/surfacesdl-graphics.h
    # mixer
    ${ScummVM_SOURCE_DIR}/backends/mixer/sdl/sdl-mixer.cpp
    ${ScummVM_SOURCE_DIR}/backends/mixer/sdl/sdl-mixer.h
)
list(APPEND SCUMMVM_FILES ${SDL_BACKEND_FILES})
Include(FindSDL)
Find_Package(SDL REQUIRED)
include_directories(${SDL_INCLUDE_DIR})
set(SCUMVM_LIBS sdl)
do_source_group(${ScummVM_SOURCE_DIR} "${SCUMMVM_FILES}")
add_executable(scummvm ${SCUMMVM_FILES})
add_definitions(-DSDL_BACKEND)
endif()

if (ENABLE_WIN32_BACKEND)
set(WIN32_BACKEND_FILES
    ${ScummVM_SOURCE_DIR}/backends/events/win32/win32-events.h
    ${ScummVM_SOURCE_DIR}/backends/events/win32/win32-events.cpp
    ${ScummVM_SOURCE_DIR}/backends/graphics/gdi/gdi-graphics.h
    ${ScummVM_SOURCE_DIR}/backends/graphics/gdi/gdi-graphics.cpp
    ${ScummVM_SOURCE_DIR}/backends/mixer/win32/win32-mixer.cpp
    ${ScummVM_SOURCE_DIR}/backends/mixer/win32/win32-mixer.h
    ${ScummVM_SOURCE_DIR}/backends/platform/win32/win32-main.cpp
    ${ScummVM_SOURCE_DIR}/backends/platform/win32/win32-osystem.h
    ${ScummVM_SOURCE_DIR}/backends/platform/win32/win32-osystem.cpp
)
list(APPEND SCUMMVM_FILES ${WIN32_BACKEND_FILES})
set(SCUMVM_LIBS winmm)
do_source_group(${ScummVM_SOURCE_DIR} "${SCUMMVM_FILES}")
add_executable(scummvm ${SCUMMVM_FILES})
add_definitions(-DWIN32_BACKEND)
add_definitions(-DUSE_WIN32_DRIVER)
endif()

target_link_libraries(scummvm ${SCUMVM_LIBS})

# Libraries
if (WIN32)
    target_sources(scummvm PUBLIC ../../dists/scummvm.rc)
endif()

# Engines libraries handling
foreach(ENGINE IN LISTS ENGINES)
    if (ENABLE_${ENGINE})
        string(TOLOWER ${ENGINE} ENGINE_LIB)
        # Enable C++11
        set_property(TARGET ${ENGINE_LIB} PROPERTY CXX_STANDARD 11)
        set_property(TARGET ${ENGINE_LIB} PROPERTY CXX_STANDARD_REQUIRED ON)
        # Link against the engine
        target_link_libraries(scummvm ${ENGINE_LIB})
    endif()
endforeach()

set_property(TARGET scummvm PROPERTY CXX_STANDARD 11)
set_property(TARGET scummvm PROPERTY CXX_STANDARD_REQUIRED ON)

# warning C4068: unknown pragma
set_target_properties(scumm PROPERTIES COMPILE_FLAGS "/wd4068")
set_target_properties(scummvm PROPERTIES COMPILE_FLAGS "/wd4068")
# warning C4103: alignment changed after including header, may be due to missing #pragma pack(pop)
set_target_properties(scumm PROPERTIES COMPILE_FLAGS "/wd4103")
set_target_properties(scummvm PROPERTIES COMPILE_FLAGS "/wd4103")
